[package]
name = "seer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tokio = { version = "1.41.1", features = ["full"] }
prost = "0.13.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"

[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
